--- a/04 - Array Cardio Day 1/index-START.html
+++ b/04 - Array Cardio Day 1/index-START.html
@@ -38,10 +38,10 @@
     
     // Array.prototype.filter()
     // 1. Filter the list of inventors for those who were born in the 1500's
-
+     console.log(inventors.filter((item, curr) => { return item.year > 1500 && item.year < 1600}));
     // Array.prototype.map()
     // 2. Give us an array of the inventors first and last names
-
+    console.log(inventors.map((item) =>{return [item.first, item.last]}));
     // Array.prototype.sort()
     // 3. Sort the inventors by birthdate, oldest to youngest
 
